# TermiGroove

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tui-test.config.ts
.cargo-husky/hooks/: pre-commit  precommit
.cursor/: mcp.json
.cursor/commands/: create-spec.md  create-steering.md
.cursor/rules/: integrations.mdc  notion_map.mdc  tdd.mdc
.github/workflows/: ci.yml
.serena/: project.yml
.serena/memories/: code_style_conventions.md  pause_feature_task4_status.md  project_overview.md  suggested_commands.md  task_completion.md  tech_stack.md
.spec-workflow/: session.json
.spec-workflow/steering/: product.md  structure.md  tech.md
.spec-workflow/user-templates/: tasks-template.md
src/: app_state.rs  audio.rs  input.rs  lib.rs  main.rs  selection.rs  ui.rs
src/application/: mod.rs  state.rs
src/domain/: mod.rs  pads.rs  ports.rs  tempo.rs  timing.rs
src/presentation/: effect_handler.rs  file_explorer_adapter.rs  mod.rs  view_model.rs
src/state/: loop_engine.rs  mod.rs
tests/: app_state_loop.rs  app_state_tests.rs  application_dto_input_action.rs  application_dto_loop_state.rs  application_service.rs  domain_timing.rs  input_handling_tests.rs  integration_file_navigation.rs  integration_pads.rs  loop_engine.rs  presentation_file_explorer_adapter.rs
tests/e2e/: .gitkeep  acceptance.test.ts  bpm-and-bars.test.ts  explorer-forwarding.test.ts  focus-toggle.test.ts  initial-render.test.ts  loop_capture.test.ts  loop_overdub_layers.test.ts  mode-and-quit.test.ts  pads-flow.test.ts  pads-polyphony.test.ts  sample.test.ts  (+3 more)
(+106 files in other folders)
